--- a/index.html
+++ b/index.html
@@ -117,6 +117,14 @@ flexibility(document.documentElement);
 
   gtag('config', 'AW-17585770932');
 </script>
+<!-- Event snippet for Page view conversion page -->
+<script>
+  gtag('event', 'conversion', {
+      'send_to': 'AW-17585770932/iJiwCIK9r8EbELSjxsFB',
+      'value': 1.0,
+      'currency': 'INR'
+  });
+</script>
 </head>
 
 <body itemtype='https://schema.org/WebPage' itemscope='itemscope' class="home page-template-default page page-id-7 wp-custom-logo ast-desktop ast-page-builder-template ast-no-sidebar astra-4.6.3 ast-single-post ast-inherit-site-logo-transparent ast-hfb-header elementor-default elementor-kit-6 elementor-page elementor-page-7">
