--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -8,8 +8,8 @@
 <channel>
 	<title>
 	Comments for Book Your seat	</title>
-	<atom:link href="https://ticketmasterguru.site/comments/feed/" rel="self" type="application/rss+xml" />
-	<link>https://ticketmasterguru.site</link>
+	<atom:link href="https://eventticketcode.shop/comments/feed/" rel="self" type="application/rss+xml" />
+	<link>https://eventticketcode.shop</link>
 	<description></description>
 	<lastBuildDate>Fri, 19 Jan 2024 05:30:24 +0000</lastBuildDate>
 	<sy:updatePeriod>
@@ -20,11 +20,11 @@
 	<item>
 		<title>
 		Comment on Hello world! by A WordPress Commenter		</title>
-		<link>https://ticketmasterguru.site/hello-world/#comment-1</link>
+		<link>https://eventticketcode.shop/hello-world/#comment-1</link>
 
 		<dc:creator><![CDATA[A WordPress Commenter]]></dc:creator>
 		<pubDate>Fri, 19 Jan 2024 05:30:24 +0000</pubDate>
-		<guid isPermaLink="false">https://ticketmasterguru.site/?p=1#comment-1</guid>
+		<guid isPermaLink="false">https://eventticketcode.shop/?p=1#comment-1</guid>
 
 					<description><![CDATA[Hi, this is a comment.
 To get started with moderating, editing, and deleting comments, please visit the Comments screen in the dashboard.
