--- a/feed/index.html
+++ b/feed/index.html
@@ -9,8 +9,8 @@
 
 <channel>
 	<title>Book Your seat</title>
-	<atom:link href="https://ticketmasterguru.site/feed/" rel="self" type="application/rss+xml" />
-	<link>https://ticketmasterguru.site</link>
+	<atom:link href="https://eventticketcode.shop/feed/" rel="self" type="application/rss+xml" />
+	<link>https://eventticketcode.shop</link>
 	<description></description>
 	<lastBuildDate>Fri, 19 Jan 2024 05:30:24 +0000</lastBuildDate>
 	<language>en-US</language>
@@ -21,20 +21,20 @@
 	<generator>https://wordpress.org/?v=6.4.3</generator>
 	<item>
 		<title>Hello world!</title>
-		<link>https://ticketmasterguru.site/hello-world/</link>
-					<comments>https://ticketmasterguru.site/hello-world/#comments</comments>
+		<link>https://eventticketcode.shop/hello-world/</link>
+					<comments>https://eventticketcode.shop/hello-world/#comments</comments>
 		
 		<dc:creator><![CDATA[admin]]></dc:creator>
 		<pubDate>Fri, 19 Jan 2024 05:30:24 +0000</pubDate>
 				<category><![CDATA[Blog]]></category>
-		<guid isPermaLink="false">https://ticketmasterguru.site/?p=1</guid>
+		<guid isPermaLink="false">https://eventticketcode.shop/?p=1</guid>
 
 					<description><![CDATA[Welcome to WordPress. This is your first post. Edit or delete it, then start writing!]]></description>
 										<content:encoded><![CDATA[
 <p>Welcome to WordPress. This is your first post. Edit or delete it, then start writing!</p>
 ]]></content:encoded>
 					
-					<wfw:commentRss>https://ticketmasterguru.site/hello-world/feed/</wfw:commentRss>
+					<wfw:commentRss>https://eventticketcode.shop/hello-world/feed/</wfw:commentRss>
 			<slash:comments>1</slash:comments>
 		
 		
